# exchange-pred

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
backtest/: walk_forward.py
config/: settings.py
core/: cache.py  db_setup.py
data_pipeline/: feature_engine.py  labeling.py
data_pipeline/sources/: base.py  ingest_tvdatafeed.py  ingest_yfinance.py
docs/: 01_project_scope_and_ui.md  02_data_architecture_and_features.md  03_ai_models_and_mlops.md  04_deployment_and_environment.md  project_structure.txt  skill.md
inference/: analysis_engine.py  model_loader.py  signal_aggregator.py
ml_pipeline/: calibrate.py  common.py  eval_plots.py  export_onnx.py  financial_metrics.py  lstm_model.py  sequence_dataset.py  train_lightgbm.py  train_lstm.py  validation.py
tests/: test_analysis_engine.py  test_calibrate.py  test_export_onnx.py  test_feature_engine.py  test_financial_metrics.py  test_labeling.py  test_lstm_model.py  test_model_loader.py  test_sequence_dataset.py  test_signal_aggregator.py  test_train_lightgbm.py  test_train_lstm.py  test_validation.py  test_walk_forward.py
utils/: logging_config.py
