[project]
name = "borsacim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.1.4",
    "diskcache>=5.6.3",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=2.10",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.2,<3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "tenacity>=9.1.4",
    "torch>=2.12.1",
    "tvdatafeed",
    "yfinance>=1.4.1",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
