[project]
name = "borsacim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.1.4",
    "diskcache>=5.6.3",
    "huggingface-hub>=1.20.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=2.10",
    "numpy>=2.4.6",
    "onnxconverter-common>=1.16.0",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.27.0",
    "optuna>=4.9.0",
    "pandas>=2.2,<3",
    "plotly>=6.8.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "torch>=2.12.1",
    "tvdatafeed",
    "yfinance>=1.4.1",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 140
target-version = "py312"
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # bugbear (common bug patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
